Use pandocker instead of system pandoc.
This entire setup is moderately fragile, differing versions of pandoc and
panflute will make the setup break (panflute sometimes is out of sync with
pandoc).

Use pandocker instead of system pandoc. Pandocker fixes versions of things
in a docker image, slightly less fragile than relying on system installed
versions of pandoc and panflute.

--- a/courses/Makefile
+++ b/courses/Makefile
@@ -1,3 +1,5 @@
+PANDOC   = docker run --rm -u `id -u`:`id -g` -v `pwd`:/pandoc dalibo/pandocker
+
 SHELL    = /bin/bash
 EXISTING = COMP1010 COMP1020 COMP1500
 COURSES  = $(EXISTING) COMP1000
@@ -15,11 +17,11 @@ pdfs: $(addsuffix .pdf, $(COURSES))
 html: $(addsuffix .html, $(COURSES))
 
 %.html: %-struct.md ./scripts/colour.py
-	pandoc $< -o $@ -F ./scripts/colour.py --number-sections --standalone --toc \
+	$(PANDOC) $< -o $@ -F ./scripts/colour.py --number-sections --standalone --toc \
 		--toc-depth $(TOCDEPTH) --number-offset=$(@:COMP%.html=%)
 
 %.pdf: %-struct.md ./scripts/colour.py
-	pandoc $< -o $@ -F ./scripts/colour.py --number-sections --standalone --toc \
+	$(PANDOC) $< -o $@ -F ./scripts/colour.py --number-sections --standalone --toc \
 		--toc-depth $(TOCDEPTH) --pdf-engine=xelatex \
 		-V header-includes="\usepackage{tocstyle}" \
 		-V header-includes="\settocstylefeature{spaceafternumber}{0.5em}" \
@@ -30,23 +32,23 @@ html: $(addsuffix .html, $(COURSES))
 
 %-struct.md: %.md ./scripts/tags-to-attr.py ./scripts/group-by-outcome.py
 	cat <(sed -n '/^---$$/,/^---$$/p' $<) \
-		<(pandoc $< -f markdown-auto_identifiers --reference-links \
+		<($(PANDOC) $< -f markdown-auto_identifiers --reference-links \
 			     --reference-location=section -F ./scripts/tags-to-attr.py \
 				 -F ./scripts/group-by-outcome.py -t markdown) \
 		> $@
 
 %-shifted.md: %-struct.md ./scripts/yamltitletoheaders.py
-	pandoc $< -F ./scripts/yamltitletoheaders.py --shift-heading-level-by=2 -t markdown \
+	$(PANDOC) $< -F ./scripts/yamltitletoheaders.py --shift-heading-level-by=2 -t markdown \
 			  -o $@
 
 COMP1000.html: COMP1000.md appendix.md $(SHIFTED_EXISTING) $(SCRIPTS)
-	pandoc COMP1000.md appendix.md $(SHIFTED_EXISTING) $(addprefix -F , $(SCRIPTS)) -o $@ \
+	$(PANDOC) COMP1000.md appendix.md $(SHIFTED_EXISTING) $(addprefix -F , $(SCRIPTS)) -o $@ \
 			-F ./scripts/missing.py \
 			--number-sections --standalone --toc --toc-depth $(TOCDEPTH) \
 			--number-offset=1000
 
 COMP1000.pdf: COMP1000.md appendix.tex $(SHIFTED_EXISTING) $(SCRIPTS)
-	pandoc COMP1000.md appendix.tex $(SHIFTED_EXISTING) $(addprefix -F , $(SCRIPTS)) -o $@ \
+	$(PANDOC) COMP1000.md appendix.tex $(SHIFTED_EXISTING) $(addprefix -F , $(SCRIPTS)) -o $@ \
 			-F ./scripts/missing.py \
 			--standalone --toc --toc-depth $(TOCDEPTH) --pdf-engine=xelatex \
 			-V header-includes="\usepackage{tocstyle}" \
@@ -58,12 +60,12 @@ COMP1000.pdf: COMP1000.md appendix.tex $(SHIFTED_EXISTING) $(SCRIPTS)
 			-V toccolor="blue" --number-sections
 
 COMP1020.html: COMP1020.md appendix.md COMP1010-shifted.md $(SCRIPTS)
-	pandoc COMP1020.md appendix.md COMP1010-shifted.md $(addprefix -F , $(SCRIPTS)) \
+	$(PANDOC) COMP1020.md appendix.md COMP1010-shifted.md $(addprefix -F , $(SCRIPTS)) \
 		--number-sections --standalone --toc --toc-depth $(TOCDEPTH) \
 		--number-offset=1020 -o $@
 
 COMP1020.pdf: COMP1020.md appendix.tex COMP1010-shifted.md $(SCRIPTS)
-	pandoc COMP1020.md appendix.tex COMP1010-shifted.md $(addprefix -F , $(SCRIPTS)) -o $@ \
+	$(PANDOC) COMP1020.md appendix.tex COMP1010-shifted.md $(addprefix -F , $(SCRIPTS)) -o $@ \
 			--standalone --toc --toc-depth $(TOCDEPTH) --pdf-engine=xelatex \
 			-V header-includes="\usepackage{tocstyle}" \
 			-V header-includes="\settocstylefeature{spaceafternumber}{0.5em}" \
